// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button No 1`] = `
<div
  className="Button"
>
  <button
    className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "background": "#FF1744",
        "borderRadius": "5px",
        "color": "white",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-27"
    >
      No
    </span>
    <span
      className="MuiTouchRipple-root-44"
    />
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Yes 1`] = `
<div
  className="Button"
>
  <button
    className="MuiButtonBase-root-16 MuiButton-root-1 MuiButton-raised-6"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "background": "#448AFF",
        "borderRadius": "5px",
        "color": "white",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      Yes
    </span>
    <span
      className="MuiTouchRipple-root-19"
    />
  </button>
</div>
`;

exports[`Storyshots Atoms/Icon/Header Home 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#039BE5",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-111"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Header RssFeed 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#039BE5",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-117"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="6.18"
          cy="17.82"
          r="2.18"
        />
        <path
          d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Header Twitter 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#039BE5",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m31.5 11.7c1.3-0.8 2.2-2 2.7-3.4-1.4 0.7-2.7 1.2-4 1.4-1.1-1.2-2.6-1.9-4.4-1.9-1.7 0-3.2 0.6-4.4 1.8-1.2 1.2-1.8 2.7-1.8 4.4 0 0.5 0.1 0.9 0.2 1.3-5.1-0.1-9.4-2.3-12.7-6.4-0.6 1-0.9 2.1-0.9 3.1 0 2.2 1 3.9 2.8 5.2-1.1-0.1-2-0.4-2.8-0.8 0 1.5 0.5 2.8 1.4 4 0.9 1.1 2.1 1.8 3.5 2.1-0.5 0.1-1 0.2-1.6 0.2-0.5 0-0.9 0-1.1-0.1 0.4 1.2 1.1 2.3 2.1 3 1.1 0.8 2.3 1.2 3.6 1.3-2.2 1.7-4.7 2.6-7.6 2.6-0.7 0-1.2 0-1.5-0.1 2.8 1.9 6 2.8 9.5 2.8 3.5 0 6.7-0.9 9.4-2.7 2.8-1.8 4.8-4.1 6.1-6.7 1.3-2.6 1.9-5.3 1.9-8.1v-0.8c1.3-0.9 2.3-2 3.1-3.2-1.1 0.5-2.3 0.8-3.5 1z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side Help 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m20 0c-11 0-20 9-20 20 0 8.8 5.7 16.3 13.7 19 1 0.2 1.3-0.5 1.3-1 0-0.5 0-2 0-3.7-5.5 1.2-6.7-2.4-6.7-2.4-0.9-2.3-2.2-2.9-2.2-2.9-1.9-1.2 0.1-1.2 0.1-1.2 2 0.1 3.1 2.1 3.1 2.1 1.7 3 4.6 2.1 5.8 1.6 0.2-1.3 0.7-2.2 1.3-2.7-4.5-0.5-9.2-2.2-9.2-9.8 0-2.2 0.8-4 2.1-5.4-0.2-0.5-0.9-2.6 0.2-5.3 0 0 1.7-0.5 5.5 2 1.6-0.4 3.3-0.6 5-0.6 1.7 0 3.4 0.2 5 0.7 3.8-2.6 5.5-2.1 5.5-2.1 1.1 2.8 0.4 4.8 0.2 5.3 1.3 1.4 2.1 3.2 2.1 5.4 0 7.6-4.7 9.3-9.2 9.8 0.7 0.6 1.4 1.9 1.4 3.7 0 2.7 0 4.9 0 5.5 0 0.6 0.3 1.2 1.3 1 8-2.7 13.7-10.2 13.7-19 0-11-9-20-20-20z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side IndeterminateCheckBox 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-99"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side Power 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-81"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side Refresh 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-87"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side RssFeed 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-93"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="6.18"
          cy="17.82"
          r="2.18"
        />
        <path
          d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon/Side Settings 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-105"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Name 1`] = `
<div
  className="Input"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-150"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-159 MuiInputLabel-root-154 MuiInputLabel-formControl-155 MuiInputLabel-animated-158"
      data-shrink={false}
      htmlFor="Name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-164 MuiInput-formControl-165 MuiInput-underline-168"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-172"
        defaultValue={undefined}
        disabled={false}
        id="Name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input URL 1`] = `
<div
  className="Input"
/>
`;

exports[`Storyshots Atoms/Input/Input  1`] = `
<div
  className="Input"
/>
`;

exports[`Storyshots Atoms/Time 現在日時 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Time"
  >
    <div
      className="Time-MMDD"
    >
      6/15
    </div>
    <div
      className="Time-HHmmss"
    >
      07:12:05
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Example 1 1`] = `
<div
  className="Input"
/>
`;

exports[`Storyshots Molecules/Menus Side Menu 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#01579B",
      "height": "18em",
      "width": "3em",
    }
  }
>
  <div
    className="Menus"
  >
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-123"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
          />
        </g>
      </svg>
    </div>
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-123"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
        </g>
      </svg>
    </div>
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-123"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="6.18"
            cy="17.82"
            r="2.18"
          />
          <path
            d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
          />
        </g>
      </svg>
    </div>
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-123"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </g>
      </svg>
    </div>
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-123"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
          />
        </g>
      </svg>
    </div>
    <div
      className="Icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m20 0c-11 0-20 9-20 20 0 8.8 5.7 16.3 13.7 19 1 0.2 1.3-0.5 1.3-1 0-0.5 0-2 0-3.7-5.5 1.2-6.7-2.4-6.7-2.4-0.9-2.3-2.2-2.9-2.2-2.9-1.9-1.2 0.1-1.2 0.1-1.2 2 0.1 3.1 2.1 3.1 2.1 1.7 3 4.6 2.1 5.8 1.6 0.2-1.3 0.7-2.2 1.3-2.7-4.5-0.5-9.2-2.2-9.2-9.8 0-2.2 0.8-4 2.1-5.4-0.2-0.5-0.9-2.6 0.2-5.3 0 0 1.7-0.5 5.5 2 1.6-0.4 3.3-0.6 5-0.6 1.7 0 3.4 0.2 5 0.7 3.8-2.6 5.5-2.1 5.5-2.1 1.1 2.8 0.4 4.8 0.2 5.3 1.3 1.4 2.1 3.2 2.1 5.4 0 7.6-4.7 9.3-9.2 9.8 0.7 0.6 1.4 1.9 1.4 3.7 0 2.7 0 4.9 0 5.5 0 0.6 0.3 1.2 1.3 1 8-2.7 13.7-10.2 13.7-19 0-11-9-20-20-20z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header Header 1`] = `
<div
  className="Header"
>
  <div
    className="Header-Left"
  >
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-51"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="Header-Center"
  >
    <div
      className="Icon"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-51"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="6.18"
            cy="17.82"
            r="2.18"
          />
          <path
            d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
          />
        </g>
      </svg>
    </div>
    <h3
      className="MuiTypography-root-57 MuiTypography-subheading-64 MuiTypography-colorInherit-76"
    >
      +
    </h3>
    <div
      className="Icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m31.5 11.7c1.3-0.8 2.2-2 2.7-3.4-1.4 0.7-2.7 1.2-4 1.4-1.1-1.2-2.6-1.9-4.4-1.9-1.7 0-3.2 0.6-4.4 1.8-1.2 1.2-1.8 2.7-1.8 4.4 0 0.5 0.1 0.9 0.2 1.3-5.1-0.1-9.4-2.3-12.7-6.4-0.6 1-0.9 2.1-0.9 3.1 0 2.2 1 3.9 2.8 5.2-1.1-0.1-2-0.4-2.8-0.8 0 1.5 0.5 2.8 1.4 4 0.9 1.1 2.1 1.8 3.5 2.1-0.5 0.1-1 0.2-1.6 0.2-0.5 0-0.9 0-1.1-0.1 0.4 1.2 1.1 2.3 2.1 3 1.1 0.8 2.3 1.2 3.6 1.3-2.2 1.7-4.7 2.6-7.6 2.6-0.7 0-1.2 0-1.5-0.1 2.8 1.9 6 2.8 9.5 2.8 3.5 0 6.7-0.9 9.4-2.7 2.8-1.8 4.8-4.1 6.1-6.7 1.3-2.6 1.9-5.3 1.9-8.1v-0.8c1.3-0.9 2.3-2 3.1-3.2-1.1 0.5-2.3 0.8-3.5 1z"
          />
        </g>
      </svg>
    </div>
    <h3
      className="MuiTypography-root-57 MuiTypography-subheading-64 MuiTypography-colorInherit-76"
    >
      Feed
    </h3>
  </div>
  <div
    className="Header-Right"
  />
</div>
`;

exports[`Storyshots Organisms/Side Side 1`] = `
<div
  className="Side"
>
  <div
    className="Side-Top"
  >
    <div
      className="Menus"
    >
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-159"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
            />
          </g>
        </svg>
      </div>
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-159"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </g>
        </svg>
      </div>
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-159"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="6.18"
              cy="17.82"
              r="2.18"
            />
            <path
              d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
            />
          </g>
        </svg>
      </div>
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-159"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
            />
          </g>
        </svg>
      </div>
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-159"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
            />
          </g>
        </svg>
      </div>
      <div
        className="Icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": undefined,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m20 0c-11 0-20 9-20 20 0 8.8 5.7 16.3 13.7 19 1 0.2 1.3-0.5 1.3-1 0-0.5 0-2 0-3.7-5.5 1.2-6.7-2.4-6.7-2.4-0.9-2.3-2.2-2.9-2.2-2.9-1.9-1.2 0.1-1.2 0.1-1.2 2 0.1 3.1 2.1 3.1 2.1 1.7 3 4.6 2.1 5.8 1.6 0.2-1.3 0.7-2.2 1.3-2.7-4.5-0.5-9.2-2.2-9.2-9.8 0-2.2 0.8-4 2.1-5.4-0.2-0.5-0.9-2.6 0.2-5.3 0 0 1.7-0.5 5.5 2 1.6-0.4 3.3-0.6 5-0.6 1.7 0 3.4 0.2 5 0.7 3.8-2.6 5.5-2.1 5.5-2.1 1.1 2.8 0.4 4.8 0.2 5.3 1.3 1.4 2.1 3.2 2.1 5.4 0 7.6-4.7 9.3-9.2 9.8 0.7 0.6 1.4 1.9 1.4 3.7 0 2.7 0 4.9 0 5.5 0 0.6 0.3 1.2 1.3 1 8-2.7 13.7-10.2 13.7-19 0-11-9-20-20-20z"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="Side-Bottom"
  >
    <div
      className="Time"
    >
      <div
        className="Time-MMDD"
      >
        6/15
      </div>
      <div
        className="Time-HHmmss"
      >
        07:12:05
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Page Page 1`] = `
<div
  className="Page"
>
  <div
    className="Side"
  >
    <div
      className="Side-Top"
    >
      <div
        className="Menus"
      >
        <div
          className="Icon"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-129"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
              />
            </g>
          </svg>
        </div>
        <div
          className="Icon"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-129"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </g>
          </svg>
        </div>
        <div
          className="Icon"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-129"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="6.18"
                cy="17.82"
                r="2.18"
              />
              <path
                d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
              />
            </g>
          </svg>
        </div>
        <div
          className="Icon"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-129"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
              />
            </g>
          </svg>
        </div>
        <div
          className="Icon"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-129"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
              />
            </g>
          </svg>
        </div>
        <div
          className="Icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 0c-11 0-20 9-20 20 0 8.8 5.7 16.3 13.7 19 1 0.2 1.3-0.5 1.3-1 0-0.5 0-2 0-3.7-5.5 1.2-6.7-2.4-6.7-2.4-0.9-2.3-2.2-2.9-2.2-2.9-1.9-1.2 0.1-1.2 0.1-1.2 2 0.1 3.1 2.1 3.1 2.1 1.7 3 4.6 2.1 5.8 1.6 0.2-1.3 0.7-2.2 1.3-2.7-4.5-0.5-9.2-2.2-9.2-9.8 0-2.2 0.8-4 2.1-5.4-0.2-0.5-0.9-2.6 0.2-5.3 0 0 1.7-0.5 5.5 2 1.6-0.4 3.3-0.6 5-0.6 1.7 0 3.4 0.2 5 0.7 3.8-2.6 5.5-2.1 5.5-2.1 1.1 2.8 0.4 4.8 0.2 5.3 1.3 1.4 2.1 3.2 2.1 5.4 0 7.6-4.7 9.3-9.2 9.8 0.7 0.6 1.4 1.9 1.4 3.7 0 2.7 0 4.9 0 5.5 0 0.6 0.3 1.2 1.3 1 8-2.7 13.7-10.2 13.7-19 0-11-9-20-20-20z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Side-Bottom"
    >
      <div
        className="Time"
      >
        <div
          className="Time-MMDD"
        >
          6/15
        </div>
        <div
          className="Time-HHmmss"
        >
          07:12:05
        </div>
      </div>
    </div>
  </div>
  <div
    className="Header"
  >
    <div
      className="Header-Left"
    >
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-129"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      className="Header-Center"
    >
      <div
        className="Icon"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-129"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="6.18"
              cy="17.82"
              r="2.18"
            />
            <path
              d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
            />
          </g>
        </svg>
      </div>
      <h3
        className="MuiTypography-root-135 MuiTypography-subheading-142 MuiTypography-colorInherit-154"
      >
        +
      </h3>
      <div
        className="Icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": undefined,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m31.5 11.7c1.3-0.8 2.2-2 2.7-3.4-1.4 0.7-2.7 1.2-4 1.4-1.1-1.2-2.6-1.9-4.4-1.9-1.7 0-3.2 0.6-4.4 1.8-1.2 1.2-1.8 2.7-1.8 4.4 0 0.5 0.1 0.9 0.2 1.3-5.1-0.1-9.4-2.3-12.7-6.4-0.6 1-0.9 2.1-0.9 3.1 0 2.2 1 3.9 2.8 5.2-1.1-0.1-2-0.4-2.8-0.8 0 1.5 0.5 2.8 1.4 4 0.9 1.1 2.1 1.8 3.5 2.1-0.5 0.1-1 0.2-1.6 0.2-0.5 0-0.9 0-1.1-0.1 0.4 1.2 1.1 2.3 2.1 3 1.1 0.8 2.3 1.2 3.6 1.3-2.2 1.7-4.7 2.6-7.6 2.6-0.7 0-1.2 0-1.5-0.1 2.8 1.9 6 2.8 9.5 2.8 3.5 0 6.7-0.9 9.4-2.7 2.8-1.8 4.8-4.1 6.1-6.7 1.3-2.6 1.9-5.3 1.9-8.1v-0.8c1.3-0.9 2.3-2 3.1-3.2-1.1 0.5-2.3 0.8-3.5 1z"
            />
          </g>
        </svg>
      </div>
      <h3
        className="MuiTypography-root-135 MuiTypography-subheading-142 MuiTypography-colorInherit-154"
      >
        Feed
      </h3>
    </div>
    <div
      className="Header-Right"
    />
  </div>
</div>
`;
